--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,17 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         env:
-          SECRET_MESSAGE: ${{ secrets.SECRET_MESSAGE }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          LOGIN_URL: ${{ secrets.LOGIN_URL }}
+          WAITLIST_URL: ${{ secrets.WAITLIST_URL }}
         run: |
-          echo "const SECRET_MESSAGE = '$SECRET_MESSAGE';" > config.js
+          echo "const SUPABASE_URL = '$SUPABASE_URL';" > config.js
+          echo "const SUPABASE_KEY = '$SUPABASE_KEY';" >> config.js
+          echo "const JWT_SECRET = new TextEncoder().encode('$JWT_SECRET');" >> config.js
+          echo "const LOGIN_URL = '$LOGIN_URL';" >> config.js
+          echo "const WAITLIST_URL = '$WAITLIST_URL';" >> config.js
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
