--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,20 @@
 name: Deploy to GitHub Pages
+
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build
-        env:
-          SECRET_MESSAGE: ${{ secrets.SECRET_MESSAGE }}
+      
+      - name: Replace secrets
         run: |
-          echo "const SECRET_MESSAGE = '$SECRET_MESSAGE';" > config.js
+          sed -i 's/{{MY_SECRET}}/${{ secrets.MY_SECRET }}/g' index.html
+      
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
