--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,21 @@
-name: Deploy to GitHub Pages
-
+name: Build and Deploy
 on:
   push:
     branches:
       - main
-
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: Replace secrets
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Replace Secrets
         run: |
-          sed -i 's/{{APP_URL}}/${{ secrets.APP_URL }}/g' index.html
-      
+          sed -i 's|%%APP_URL%%|${{ secrets.APP_URL }}|g' index.html
+
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .
+          branch: gh-pages
+          folder: .
